--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1 [ngClass]="classes">{{ title }}</h1>
 <h1 [ngStyle]="styles">Trial</h1>
+<app-user-details></app-user-details>
+<app-user-details></app-user-details>
+<app-user-details></app-user-details>
 
 {{ value }}
 
