component input output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
-<h1 [ngClass]="classes">{{ title }}</h1>
+<app-github-users></app-github-users>
+<!-- <app-user-details
+  userName="asdfa"
+  [userDetails]="student1Details"
+></app-user-details> -->
+<!-- <img src="https://i.imgur.com/XgbZdeA.jpeg" /> -->
+<!-- <app-user-details [userName]="student1"></app-user-details>
+<app-user-details userName="{{ student2 }}"></app-user-details> -->
+
+<!-- 
+<input type="text" /> -->
+
+<!-- <h1 [ngClass]="classes">{{ title }}</h1>
 <h1 [ngStyle]="styles">Trial</h1>
-<app-user-details></app-user-details>
-<app-user-details></app-user-details>
-<app-user-details></app-user-details>
+
 
 {{ value }}
 
@@ -44,4 +54,4 @@
   <h1>Selected User</h1>
   <h2>Name: {{ selectedUser.name }}</h2>
   <p>Age: {{ selectedUser.age }}</p>
-</div>
+</div> -->
