--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-github-users></app-github-users>
+<app-slideshow></app-slideshow>
+<!-- <app-github-users></app-github-users> -->
 <!-- <app-user-details
   userName="asdfa"
   [userDetails]="student1Details"
