slideshow component Input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-slideshow></app-slideshow>
+<app-slideshow [imgList]="dogImages" slideshowTitle="Dogs"></app-slideshow>
+
+<app-slideshow [imgList]="catImages" slideshowTitle="Cats"></app-slideshow>
 <!-- <app-github-users></app-github-users> -->
 <!-- <app-user-details
   userName="asdfa"
